loopdowhile.Poucet2.scala.code
var NBag:Int=0
left()
while (!exitReached()) {if (NBag>=3) {left()}
                                  else if (NBag<=2) {right()};
                                  NBag=0; 
                                   {forward(); 
                                                         if (isOverBaggle()) {NBag=NBag+1}}
                                 } while (!crossing())
if (NBag>=3) {left()}
                                  else if (NBag<=2) {right()}
forward()